Shortcodes + code overflow CSS fix (#154)
* Adds JS for copying to clipboard

* Links to Clipboard JS and Bootstrap libraries

* Adds CSS for classes that will be added by JS

* Remove Bootstrap stylesheet and replace with own styling for tooltips and buttons

* Attempts adding shortcode to Start Welcome page

* Tweaks note shortcode styling

* Removes example shortcode

* Changes clipboard button to tidymodels colors

* Makes code chunks scrollable if they have overlflow content

* move clipboard scripts to head_custom

* Removes horizontal scrolling in favor of pre-wrap solution for code overflow

* Cleans up CSS

* Updates JQuery version

* Reverts back to old jquery

* Saves CSS wrapping for code overflow for another branch

* Saves CSS for code overflow wrapping for another branch

* Fixes code overflow with a non-scrolling alternative

* Update layouts/shortcodes/note.html


* Create new shortcode flavors for rstudio-tips and warnings; specially style code within shortcodes

* Remove shortcode examples

--- a/static/css/tm.css
+++ b/static/css/tm.css
@@ -10,7 +10,8 @@ body, button, input, textarea {
   font-family: 'Lato', sans-serif;
   font-size: 17px;
   font-weight: normal;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased; 
+}
 
 
 .listItem .itemDetails .itemMeta .itemDate, .listItem .itemDetails .itemMeta .itemInfo {
@@ -961,4 +962,50 @@ h2:hover a {
 
 .fade {
   transition: opacity 0.15s linear;
+}
+
+/*------- Div tip Shortcodes --------*/
+
+div.note, 
+div.rstudio-tip, 
+div.warning {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 120px;
+  color: #1a162dcc;
+  background-color: #eab0c41a;
+  border-top: 7pt solid #a19ea936;
+  max-width: 80%;
+  line-height: 1.75em;
+  font-size: 0.85em;
+  letter-spacing: 1pt;
+}
+
+div.note code, 
+div.rstudio-tip code, 
+div.warning code {
+  background-color: #cb9faf52 !important;
+  font-size: 1em;
+}
+
+div.note {
+  background-image: url("../images/robot.png");
+}
+
+div.rstudio-tip {
+  background-image: url("../images/rstudio.png");
+}
+
+div.warning {
+  background-image: url("../images/error.png");
+}
+
+
+/*---fix code scrolling-- */
+pre {
+  white-space: pre-wrap;
 }
